--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "12.1.6",
+    "node-fecth": "^0.0.1-security",
+    "node-fetch": "^3.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "^8.0.5",
